<resources>
    <string name="app_name">My FarmManager 2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_rabbit_list_page">RabbitListPage</string>
    <string name="rabbit_form_infor">Add/Update Stock Details</string>
    <string name="date_of_birth">Date of Birth (yyyy-mm-dd)</string>
    <string name="breed">Breed</string>
    <string name="add_image">Add Image</string>
    <string name="rabbit_image_description">rabbit image</string>
    <string name="logo">Logo</string>
    <string name="welcome_text">MyFarmManager</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="farm_name">Farm Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="reset_password_text">Can\'t remember password? Reset Password.</string>
    <string name="my_hutch">My Hutch</string>
    <string name="image_of_rabbits_hutch">Image of Rabbits to represent rabbit hutch</string>
    <string name="my_goat_ranch">My Goat Ranch</string>
    <string name="image_of_goat_ranch">image of goat ranch</string>
    <string-array name="gender_options">
        <item>Male </item>
        <item>Female </item>
    </string-array>
    <string-array name="booleanEntry">
        <item>False</item>
        <item>True</item>

    </string-array>
</resources>