<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/signUpForm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp">

    <EditText
        android:id="@+id/farmName"
        style="@style/user_input"

        android:autofillHints="emailAddress"
        android:hint="@string/farm_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailInput"
        style="@style/user_input"
        android:layout_below="@id/farmName"
        android:autofillHints="emailAddress"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/phoneNumber"
        style="@style/user_input"
        android:layout_below="@id/emailInput"
        android:autofillHints="phone"
        android:hint="@string/phone_number"
        android:inputType="phone" />


    <EditText
        android:id="@+id/password"
        style="@style/user_input"
        android:layout_below="@id/phoneNumber"
        android:autofillHints="emailAddress"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <TextView
        android:id="@+id/passwordStrengthIndicator"
        android:layout_below="@id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Strength"
        android:textSize="12sp"
        android:textStyle="italic"
        android:visibility="gone"
        android:textColor="@android:color/black" />
</RelativeLayout>




